Tests/Conformance/Generated/Builtin/Constant/Bool/True_lc.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Bool.True_lc

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_bool_true_lc "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/bool/true-lc/true-lc.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Bool.True_lc
